Lid_driven_cavity_analytic/high/jitfailure-dolfin_expression_d8880511baf0e409addf68263fb47912/error.log
/tmp/tmp1cua5gp7/dolfin_expression_d8880511baf0e409addf68263fb47912.cpp: In member function ‘virtual void dolfin::dolfin_expression_d8880511baf0e409addf68263fb47912::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp1cua5gp7/dolfin_expression_d8880511baf0e409addf68263fb47912.cpp:64:39: error: invalid type argument of unary ‘*’ (have ‘double’)
           values[0] = (Re)*8.0*(x[0]**4.0-2.0*x[0]**3.0+x[0]**2.0);
                                       ^~~
/tmp/tmp1cua5gp7/dolfin_expression_d8880511baf0e409addf68263fb47912.cpp:64:53: error: invalid type argument of unary ‘*’ (have ‘double’)
           values[0] = (Re)*8.0*(x[0]**4.0-2.0*x[0]**3.0+x[0]**2.0);
                                                     ^~~
/tmp/tmp1cua5gp7/dolfin_expression_d8880511baf0e409addf68263fb47912.cpp:64:63: error: invalid type argument of unary ‘*’ (have ‘double’)
           values[0] = (Re)*8.0*(x[0]**4.0-2.0*x[0]**3.0+x[0]**2.0);
                                                               ^~~
